--- a/.github/workflows/trigger_all_tests.yml
+++ b/.github/workflows/trigger_all_tests.yml
@@ -31,12 +31,21 @@ jobs:
           fi
           echo "User is a member of the organization"
 
+
+      - name: 'Get github branch'
+        run: echo ::set-output name=branch::$(gh pr view $PR_NO --repo $REPO --json headRefName --jq '.headRefName')
+        env:
+          REPO: ${{ github.repository }}
+          PR_NO: ${{ github.event.issue.number }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Trigger CircleCI workflow
         id: trigger_circleci_workflow
         if: success()
 
         uses: CircleCI-Public/trigger-circleci-pipeline-action@v1.2.0
         with:
+          target-branch: ${{ steps.get-branch.outputs.branch }}
           GHA_Meta: "run-from-github-comments"
         env:
           CCI_TOKEN: ${{ secrets.CIRCLECI_TOKEN }}
