--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1231,8 +1231,19 @@ jobs:
       - update-spm-installation-commit
       - run:
           name: Submit Purchase Tester
-          working_directory: "Tests/TestingApps/PurchaseTesterSwiftUI"
           command: bundle exec fastlane deploy_purchase_tester
+
+  deploy-purchase-tester-dry-run:
+    <<: *base-job
+    steps:
+      - checkout
+      - setup-git-credentials
+      - trust-github-key
+      - install-dependencies
+      - update-spm-installation-commit
+      - run:
+          name: Submit Purchase Tester
+          command: bundle exec fastlane deploy_purchase_tester dry_run:true
 
   deploy-to-spm:
     docker:
@@ -1325,12 +1336,10 @@ workflows:
           requires:
             - make-release
           <<: *release-tags
-      # temporarily disabled since this won't work when building directly from its workspace.
-      # there's another PR to re-enable it
-      # - deploy-purchase-tester:
-      #     requires:
-      #       - make-release
-      #     <<: *release-tags
+      - deploy-purchase-tester:
+          requires:
+            - make-release
+          <<: *release-tags
 
   snapshot-bump:
     when:
@@ -1421,3 +1430,4 @@ workflows:
       - installation-tests-carthage
       - installation-tests-xcode-direct-integration
       - installation-tests-receipt-parser
+      - deploy-purchase-tester-dry-run
