--- a/RevenueCat.xcodeproj/xcshareddata/xcschemes/PurchaseTester.xcscheme
+++ b/RevenueCat.xcodeproj/xcshareddata/xcschemes/PurchaseTester.xcscheme
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1420"
-   version = "1.3">
+   LastUpgradeVersion = "1540"
+   version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
-      buildImplicitDependencies = "YES">
+      buildImplicitDependencies = "YES"
+      buildArchitectures = "Automatic">
       <BuildActionEntries>
          <BuildActionEntry
             buildForTesting = "YES"
@@ -14,10 +15,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "578DAA082947DD21001700FD"
-               BuildableName = "PurchaseTesterWatchOS.app"
-               BlueprintName = "PurchaseTesterWatchOS"
-               ReferencedContainer = "container:PurchaseTester.xcodeproj">
+               BlueprintIdentifier = "2CD2C4F4278C9B02005D1CC2"
+               BuildableName = "PurchaseTester.app"
+               BlueprintName = "PurchaseTester"
+               ReferencedContainer = "container:Tests/TestingApps/PurchaseTesterSwiftUI/PurchaseTester.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -26,9 +27,8 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
-      <Testables>
-      </Testables>
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      shouldAutocreateTestPlan = "YES">
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
@@ -44,12 +44,15 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "578DAA082947DD21001700FD"
-            BuildableName = "PurchaseTesterWatchOS.app"
-            BlueprintName = "PurchaseTesterWatchOS"
-            ReferencedContainer = "container:PurchaseTester.xcodeproj">
+            BlueprintIdentifier = "2CD2C4F4278C9B02005D1CC2"
+            BuildableName = "PurchaseTester.app"
+            BlueprintName = "PurchaseTester"
+            ReferencedContainer = "container:Tests/TestingApps/PurchaseTesterSwiftUI/PurchaseTester.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <StoreKitConfigurationFileReference
+         identifier = "../Tests/TestingApps/PurchaseTesterSwiftUI/PurchaseTesterStoreKitConfiguration.storekit">
+      </StoreKitConfigurationFileReference>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -61,10 +64,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "578DAA082947DD21001700FD"
-            BuildableName = "PurchaseTesterWatchOS.app"
-            BlueprintName = "PurchaseTesterWatchOS"
-            ReferencedContainer = "container:PurchaseTester.xcodeproj">
+            BlueprintIdentifier = "2CD2C4F4278C9B02005D1CC2"
+            BuildableName = "PurchaseTester.app"
+            BlueprintName = "PurchaseTester"
+            ReferencedContainer = "container:Tests/TestingApps/PurchaseTesterSwiftUI/PurchaseTester.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
