--- a/Tests/APITesters/AllAPITests/AllAPITests.xcodeproj/xcshareddata/xcschemes/AllAPITests.xcscheme
+++ b/Tests/APITesters/AllAPITests/AllAPITests.xcodeproj/xcshareddata/xcschemes/AllAPITests.xcscheme
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1430"
-   version = "1.3">
+   LastUpgradeVersion = "1540"
+   version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
-      buildImplicitDependencies = "YES">
+      buildImplicitDependencies = "YES"
+      buildArchitectures = "Automatic">
       <BuildActionEntries>
          <BuildActionEntry
             buildForTesting = "YES"
@@ -14,10 +15,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "2DD778CF270E233F0079CBD4"
-               BuildableName = "SwiftAPITester.app"
-               BlueprintName = "SwiftAPITester"
-               ReferencedContainer = "container:CustomEntitlementComputationSwiftAPITester.xcodeproj">
+               BlueprintIdentifier = "2D4C60D72C5AD1BC00A29FD2"
+               BuildableName = "AllAPITests.framework"
+               BlueprintName = "AllAPITests"
+               ReferencedContainer = "container:AllAPITests.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -26,8 +27,20 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      shouldAutocreateTestPlan = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "2D4C60DF2C5AD1BC00A29FD2"
+               BuildableName = "AllAPITestsTests.xctest"
+               BlueprintName = "AllAPITestsTests"
+               ReferencedContainer = "container:AllAPITests.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
@@ -50,10 +63,10 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "2DD778CF270E233F0079CBD4"
-            BuildableName = "SwiftAPITester.app"
-            BlueprintName = "SwiftAPITester"
-            ReferencedContainer = "container:CustomEntitlementComputationSwiftAPITester.xcodeproj">
+            BlueprintIdentifier = "2D4C60D72C5AD1BC00A29FD2"
+            BuildableName = "AllAPITests.framework"
+            BlueprintName = "AllAPITests"
+            ReferencedContainer = "container:AllAPITests.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
