--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -469,19 +469,14 @@ jobs:
           command: swift build -c release --target RevenueCatUI
           no_output_timeout: 30m
 
-  spm-custom-entitlement-computation-build:
+  api-tests:
     <<: *base-job
     steps:
       - checkout
-      - run:
-          name: SPM Custom Entitlement Computation Build
-          command: swift build --target RevenueCat_CustomEntitlementComputation
-          no_output_timeout: 30m
       - install-dependencies
-      - update-spm-installation-commit
       - run:
-          name: Custom Entitlement Computation API Tests
-          command: bundle exec fastlane build_custom_entitlement_computation_api_tester
+          name: API Tests
+          command: bundle exec fastlane run_api_tests
 
   spm-receipt-parser:
     <<: *base-job
@@ -563,11 +558,6 @@ jobs:
       - store_artifacts:
           path: fastlane/test_output
           destination: scan-test-output
-      - run:
-          condition:
-            - not: << pipeline.parameters.generate_revenuecatui_snapshots >>
-          name: RevenueCatUI API Tests
-          command: bundle exec fastlane build_revenuecatui_api_tester
 
   run-revenuecat-ui-ios-17:
     <<: *base-job
@@ -1415,7 +1405,6 @@ workflows:
       - run-test-macos
       - run-test-tvos
       - run-test-watchos
-      - spm-custom-entitlement-computation-build
       - spm-receipt-parser
       - spm-release-build
       - spm-release-build-xcode-14
@@ -1431,3 +1420,4 @@ workflows:
       - installation-tests-xcode-direct-integration
       - installation-tests-receipt-parser
       - deploy-purchase-tester-dry-run
+      - api-tests
