--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,11 +32,8 @@ parameters:
     type: string
     default: ""
 
-aliases:
-  base-job: &base-job
-    resource_class: macos.m1.medium.gen1
-    macos:
-      xcode: << parameters.xcode_version >>
+executors:
+  macos-executor:
     parameters:
       xcode_version:
         type: string
@@ -44,11 +41,20 @@ aliases:
       install_swiftlint:
         type: boolean
         default: true
+    macos:
+      xcode: << parameters.xcode_version >>
+    resource_class: macos.m1.medium.gen1
     environment:
       CIRCLECI_TESTS_GENERATE_SNAPSHOTS: << pipeline.parameters.generate_snapshots >>
       CIRCLECI_TESTS_GENERATE_REVENUECAT_UI_SNAPSHOTS: << pipeline.parameters.generate_revenuecatui_snapshots >>
     working_directory: ~/purchases-ios
     shell: /bin/bash --login -o pipefail
+
+aliases:
+  # note: the base-job alias is being phased out in favor of the executor. This is because the executor allows us to have per-job parameters.
+  base-job: &base-job
+    executor:
+      name: macos-executor
   release-branches: &release-branches
     filters:
       tags:
@@ -1212,7 +1218,12 @@ jobs:
           bundle_name: v3LoadShedderIntegration
 
   deploy-purchase-tester:
-    <<: *base-job
+    executor:
+      name: macos-executor
+    parameters:
+      dry_run:
+        type: boolean
+        default: false
     steps:
       - checkout
       - setup-git-credentials
@@ -1222,18 +1233,6 @@ jobs:
       - run:
           name: Submit Purchase Tester
           command: bundle exec fastlane deploy_purchase_tester
-
-  deploy-purchase-tester-dry-run:
-    <<: *base-job
-    steps:
-      - checkout
-      - setup-git-credentials
-      - trust-github-key
-      - install-dependencies
-      - update-spm-installation-commit
-      - run:
-          name: Submit Purchase Tester
-          command: bundle exec fastlane deploy_purchase_tester dry_run:true
 
   deploy-to-spm:
     docker:
@@ -1327,6 +1326,7 @@ workflows:
             - make-release
           <<: *release-tags
       - deploy-purchase-tester:
+          dry_run: false
           requires:
             - make-release
           <<: *release-tags
@@ -1419,5 +1419,7 @@ workflows:
       - installation-tests-carthage
       - installation-tests-xcode-direct-integration
       - installation-tests-receipt-parser
-      - deploy-purchase-tester-dry-run
       - api-tests
+      - deploy-purchase-tester:
+          dry_run: true
+      
